# halm

./: README.md  halm.cabal
src-cli/: Main.hs
src/Text/Halm/: Dictionary.hs
src/Text/Halm/NGram/: Table.hs  Trie.hs
